<resources>
    <string name="app_name">firstai</string>
    <string name="Informationsleiste">Erste Hilfe 3.0</string>
    <string name="HaftungHinweise">Haftung + Hinweise</string>
    <string name="HaftungHinweiseContent">-- Software --\nErste Hilfe auf dem Handy\nVersion: j3.0\nRelease: 2008-12-24\nLizenz: Creative Commons BY-NC-ND 3.0\nCopyright: Kai Kajus Noack\n\nErste Hilfe Illustrationen © Med4Teens\n\nDieses Programm soll Informationen zur Ersten Hilfe geben. Es stellt jedoch in keiner Weise einen Ersatz für einen Erste-Hilfe-Kurs dar, sondern dient der Auffrischung des bereits erworbenen Wissens.\n\n-- Haftungsausschluss --\nBitte beachten Sie, dass ich keine Verantwortung für Konsequenzen, die aus der Nutzung entstehen, übernehme.\nJEGLICHE HAFTUNG IST AUSGESCHLOSSEN!\nVERWENDUNG AUF EIGENE GEFAHR!\n\nIn allen Notfällen suchen Sie bitte sofort professionelle Hilfe.\n\n-- Entwicklung des Projekts --\nDas Programm soll vielsprachig werden. Freiwillige Übersetzer gesucht!!\n\nWeitere Informationen erhalten Sie im Internet unter www.firstai.de oder schreiben Sie eine E-Mail an: info@firstai.de"</string>
    <string name="NotrufeWeltweit">- Notrufe weltweit -</string>
    <string name="NotrufeWeltweitTitel">Kontinent wählen</string>
	    <string name="NotrufeWeltweitAfrika">Afrika</string>
	    <string name="NotrufeWeltweitAfrikaContent"># Ägypten\nFeuer:180 | Pol:122 | Not:123\n\n# Algerien\nFeuer:14 | Pol:17 | Not:17\n\n# Angola\nFeuer:118 | Pol:110 | Not:118\n\n# Äquatorialguinea\nnur lokale Nummern\n\n# Äthiopien\nFeuer:93 | Pol:91 | Not:92\n\n# Benin\nFeuer:18 | Pol:17 | Not:301769\n\n# Botsuana\nFeuer:998 | Pol:999 | Not:997\n\n# Burkina Faso\nFeuer:18 | Pol:17 | Not:lokal\n\n# Burundi\nkein System\n\n# Dschibuti\nFeuer:18 | Pol:17 | Not:351351\n\n# Elfenbeinküste\nFeuer:180 | Pol:110 | Not:110\n\n# Eritrea\nnur lokale Nummern\n\n# Gabun\nFeuer:18 | Pol:1730 | Not:1300\n\n# Gambia\nFeuer:118 | Pol:117 | Not:116\n\n# Ghana\nFeuer:192 | Pol:191 | Not:193\n\n# Guinea\nnur lokale Nummern\n\n# Guinea-Bissau\nnur lokale Nummern\n\n# Kamerun\nFeuer:18 | Pol:17 | Not:lokal\n\n# Kap Verde\nFeuer:131 | Pol:132 | Not:130\n\n# Kenia\nFeuer:999 | Pol:999 | Not:999\n\n# Komoren\nnur Radiotelefon\n\n# Kongo (Demokrat. Republik)\nnur lokale Nummern\n\n# Kongo (Republik)\nnur lokale Nummern\n\n# Lesotho\nFeuer:122 | Pol:123 | Not:121\n\n# Liberia\nFeuer:911 | Pol:911 | Not:911\n\n# Libyen\nFeuer:193 | Pol:193 | Not:193\n\n# Madagaskar\nFeuer:18 | Pol:117 | Not:2262566\n\n# Malawi\nFeuer:199 | Pol:199 | Not:199\n\n# Mali\nFeuer:18 | Pol:17 | Not:15\n\n# Marokko\nFeuer:15 | Pol:19 | Not:15\n\n# Mauretanien\nFeuer:118 | Pol:117 | Not:lokal\n\n# Mauritius\nFeuer:999 | Pol:999 | Not:999\n\n# Mayotte\nFeuer:603054 | Pol:112 | Not:15\n\n# Mosambik\nFeuer:198 | Pol:119 | Not:117\n\n# Namibia\nFeuer:2032270 | Pol:1011 | Not:2032276\n\n# Niger\nFeuer:18 | Pol:17 | Not:723141\n\n# Nigeria\nFeuer:190 | Pol:119 | Not:199\n\n# Reunion\nFeuer:18 oder 112 mobil | Pol:17 oder 112 mobil | Not:15 oder 112 mobil\n\n# Ruanda\nFeuer:lokal | Pol:112 | Not:lokal\n\n# Sahara (Demokrat. Arab. Republik)\nunbekannt\n\n# Sambia\nFeuer | Pol | Not: 991 oder 112 mobil\n\n# Sao Tome und Principe\nunbekannt\n\n# Senegal\nFeuer:lokal | Pol:lokal | Not:8891515\n\n# Seychellen\nFeuer:999 | Pol:999 | Not:999\n\n# Sierra Leone\nFeuer:999 | Pol:999 | Not:999\n\n# Simbabwe\nFeuer:993 | Pol:995 | Not:994\n\n# Somalia\nnur lokale Nummern\n\n# Südafrika\nFeuer:10111 | Pol:10111 | Not:10177\n\n# Sudan\nFeuer:999 | Pol:999 | Not:lokal\n\n# Swasiland\nFeuer:lokal | Pol:999 | Not:6060911\n\n# Tansania\nFeuer:112 | Pol:112 | Not:112\n\n# Togo\nFeuer:118 | Pol:101 | Not:191\n\n# Tschad\nFeuer:18 | Pol:17 | Not:lokal\n\n# Tunesien\nFeuer:198 | Pol:197 | Not:190\n\n# Uganda\nFeuer | Pol | Not: 999 oder 111 mobil\n\n# Zentralafrikanische Republik\nFeuer:118 | Pol:611253 | Not:610600</string>
	    <string name="NotrufeWeltweitAsien">Asien</string>
	    <string name="NotrufeWeltweitAsienContent"># Afghanistan\nFeuer:-- | Pol:-- | Not:112\n\n# Armenien\nFeuer:101 | Pol:102 | Not:103\n\n# Aserbaidschan\nFeuer:101 | Pol:102 | Not:103\n\n# Bahrain\nFeuer:999 | Pol:999 | Not:999\n\n# Bangladesch\nFeuer:9555555 | Pol:8665513 | Not:199\n\n# Bhutan\nFeuer:113 | Pol:110 | Not:112\n\n# Brunei\nFeuer:995 | Pol:993 | Not:991\n\n# China\nFeuer:119 | Pol:110 | Not:120\n\n# Georgien\nFeuer:022 | Pol:022 | Not:022\n\n# Hong Kong\nFeuer:999 | Pol:999 | Not:999\n\n# Indien\nFeuer:101 | Pol:100 | Not:102\n\n# Indonesien\nFeuer:113 | Pol:110 | Not:118\n\n# Irak\nkein System\n\n# Iran\nFeuer:125 oder 112 mobil | Pol:110 oder 112 mobil  | Not:115 oder 112 mobil\n\n# Israel\nFeuer:102 | Pol:100 | Not:101\n\n# Japan\nFeuer:119 | Pol:110 | Not:119\n\n# Jemen\nFeuer:199 | Pol:199 | Not:199\n\n# Jordanien\nFeuer:193 | Pol:192 | Not:193\n\n# Kambodscha\nFeuer:118 | Pol:117 | Not:199\n\n# Kasachstan\nFeuer:03 | Pol:03 | Not:03\n\n# Katar\nFeuer:999 | Pol:999 | Not:999\n\n# Kirgisistan\nFeuer:03 | Pol:133 | Not:03\n\n# Kurdistan\nFeuer:125 | Pol:129 | Not:115\n\n# Kuwait\nFeuer:777 | Pol:777 | Not:777\n\n# Laos\nFeuer:lokal | Pol:lokal | Not:03\n\n# Libanon\nFeuer:175 | Pol:112 | Not:140\n\n# Macao\nFeuer:999 | Pol:999 | Not:999\n\n# Malaysia\nFeuer | Pol | Not: 999 oder 112 mobil\n\n# Malediven\nFeuer:118 | Pol:119 | Not:102\n\n# Mongolei\nFeuer:101 | Pol:102 | Not:103\n\n# Myanmar\nFeuer:199 | Pol:199 | Not:199\n\n# Nepal\nFeuer:101 | Pol:100 | Not:228094\n\n# Nordkorea\nnur lokale Nummern\n\n# Oman\nFeuer:999 | Pol:999 | Not:999\n\n# Osttimor\nFeuer:-- | Pol:112 | Not:7233212\n\n# Pakistan\nFeuer:16 | Pol:15 | Not:115\n\n# Philippinen\nFeuer:117 | Pol:117 | Not:117\n\n# Saudi-Arabien\nFeuer:998 | Pol:999 | Not:997\n\n# Singapur\nFeuer:995 | Pol:999 | Not:995\n\n# Sri Lanka\nFeuer:111 | Pol:119 oder 112 mobil | Not:110\n\n# Südkorea\nFeuer:119 | Pol:112 | Not:119\n\n# Syrien\nFeuer:113 | Pol:112 | Not:110\n\n# Tadschikistan\nFeuer:lokal | Pol:02 | Not:03\n\n# Taiwan\nFeuer:119 | Pol:110 | Not:119\n\n# Thailand\nFeuer:199 | Pol:191 oder 1155 (Touristen) | Not:191\n\n# Turkmenistan\nFeuer:03 | Pol:03 | Not:03\n\n# Usbekistan\nFeuer:03 | Pol:03 | Not:03\n\n# Vereinigte Arabische Emirate\nFeuer:997 | Pol:999 | Not:998\n\n# Vietnam\nFeuer:114 | Pol:113 | Not:115"</string>
	    <string name="NotrufeWeltweitEuropa">Europa</string>
	    <string name="NotrufeWeltweitNZAmerika">Nord-/Zentralamerika</string>
	    <string name="NotrufeWeltweitOzeanien">Ozeanien</string>
	    <string name="NotrufeWeltweitSuedamerika">Südamerika</string>
    <string name="Allgemeines">Allgemeines</string>
    <string name="AllergischeReaktion">Allergische Reaktion</string>
    <string name="Amputation">Amputation</string>
    <string name="AsthmaAtemnot">Asthma / Atemnot</string>
    <string name="Atemstillstand">Atemstillstand</string>
    <string name="AtmungPruefen">Atmung prüfen</string>
    <string name="Augenverletzung">Augenverletzung</string>
    <string name="Augenveraetzung">Augenverätzung</string>
    <string name="Beatmung">Beatmung</string>
    <string name="BewusstlosigkeitMitAtmung">Bewusstlosigkeit mit Atmung</string>
    <string name="BewusstlosigkeitOhneAtmung">Bewusstlosigkeit ohne Atmung</string>
    <string name="BlutungLeicht">Blutung leicht</string>
    <string name="BlutungSchwer">Blutung schwer</string>
    <string name="DiabetischesKoma">Diabetisches Koma</string>
    <string name="Durchfall">Durchfall</string>
    <string name="Eisunfall">Eisunfall</string>
    <string name="Elektrounfall">Elektrounfall</string>
    <string name="EpileptischerAnfall">Epileptischer Anfall</string>
    <string name="Erbrechen">Erbrechen</string>
    <string name="ErfrierungLeicht">Erfrierung (leicht)</string>
    <string name="ErfrierungStark">Erfrierung (stark)</string>
    <string name="Ersticken">Ersticken</string>
    <string name="Ertrinken">Ertrinken</string>
    <string name="Geburt">Geburt</string>
    <string name="GefahrenzoneRetten">Gefahrenzone (Retten)</string>
    <string name="Gehirnerschuetterung">Gehirnerschütterung</string>
    <string name="Herzdruckmassage">Herzdruckmassage</string>
    <string name="Herzinfarkt">Herzinfarkt</string>
    <string name="Hitzschlag">Hitzschlag</string>
    <string name="Insektenstich">Insektenstich</string>
    <string name="Knochenbruch">Knochenbruch</string>
    <string name="Nasenbluten">Nasenbluten</string>
    <string name="Notruf">Notruf</string>
    <string name="Reanimation">Reanimation</string>
    <string name="Rueckenverletzung">Rückenverletzung</string>
    <string name="Schaedelbasisbruch">Schädelbasisbruch</string>
    <string name="Schlaganfall">Schlaganfall</string>
    <string name="Schlangenbiss">Schlangenbiss</string>
    <string name="Schock">Schock</string>
    <string name="Sonnenbrand">Sonnenbrand</string>
    <string name="Sonnenstich">Sonnenstich</string>
    <string name="SOS">SOS</string>
    <string name="StabileSeitenlage">Stabile Seitenlage</string>
    <string name="Tierbiss">Tierbiss</string>
    <string name="Ueberhitzung">Überhitzung</string>
    <string name="Ueberzuckerung">Überzuckerung</string>
    <string name="UnfallstelleSichern">Unfallstelle sichern</string>
    <string name="Unterkuehlung">Unterkülung</string>
    <string name="Unterzuckerung">Unterzuckerung</string>
    <string name="Veraetzung">Verätzung</string>
    <string name="VerbrennungLeicht">Verbrennung (leicht)</string>
    <string name="VerbrennungSchwer">Verbrennung (schwer)</string>
    <string name="Vergiftung">Vergiftung</string>
    <string name="Verkehrsunfall">Verkehrsunfall</string>
    <string name="Verschlucken">Verschlucken</string>
    <string name="VerstauchungVerrenkung">Verstauchung / Verrenkung</string>
    <string name="Wiederbelebung">Wiederbelebung</string>
    <string name="Wirbelsaeule">Wirbelsäule</string>
    <string name="dashPlaceholder">--------------</string>
    <string name="Notruf112Waehlen">Notruf 112 wählen!</string>
</resources>