<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent"
    >

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:background="@drawable/bground" 
	    android:layout_width="fill_parent"
	    >
	    
		<TextView  
			android:id="@+id/Informationsleiste"
		    android:layout_width="fill_parent"
		    android:layout_height="45dip" 
		    android:gravity="center"
		    android:padding="5px"
		    android:text="@string/Informationsleiste"
		    android:textStyle="bold"
		    android:textColor="#FF000000"
		    android:background="#ffffffff"
		    android:textSize="25px"
		    />
		    
		<TextView
		    style="@style/MenuUnselected"
			android:id="@+id/HaftungHinweise"
			android:text="@string/HaftungHinweise"
			/>
		    
		<TextView
		    style="@style/MenuUnselected"
			android:id="@+id/NotrufeWeltweit"
			android:text="@string/NotrufeWeltweit"
		/>

        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Allgemeines"
            android:text="@string/Allgemeines"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/AllergischeReaktion"
            android:text="@string/AllergischeReaktion"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Amputation"
            android:text="@string/Amputation"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/AsthmaAtemnot"
            android:text="@string/AsthmaAtemnot"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Atemstillstand"
            android:text="@string/Atemstillstand"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/AtmungPruefen"
            android:text="@string/AtmungPruefen"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Augenverletzung"
            android:text="@string/Augenverletzung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Augenveraetzung"
            android:text="@string/Augenveraetzung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Beatmung"
            android:text="@string/Beatmung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/BewusstlosigkeitMitAtmung"
            android:text="@string/BewusstlosigkeitMitAtmung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/BewusstlosigkeitOhneAtmung"
            android:text="@string/BewusstlosigkeitOhneAtmung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/BlutungLeicht"
            android:text="@string/BlutungLeicht"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/BlutungSchwer"
            android:text="@string/BlutungSchwer"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/DiabetischesKoma"
            android:text="@string/DiabetischesKoma"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Durchfall"
            android:text="@string/Durchfall"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Eisunfall"
            android:text="@string/Eisunfall"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Elektrounfall"
            android:text="@string/Elektrounfall"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/EpileptischerAnfall"
            android:text="@string/EpileptischerAnfall"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Erbrechen"
            android:text="@string/Erbrechen"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/ErfrierungLeicht"
            android:text="@string/ErfrierungLeicht"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/ErfrierungStark"
            android:text="@string/ErfrierungStark"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Ersticken"
            android:text="@string/Ersticken"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Ertrinken"
            android:text="@string/Ertrinken"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Geburt"
            android:text="@string/Geburt"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/GefahrenzoneRetten"
            android:text="@string/GefahrenzoneRetten"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Gehirnerschuetterung"
            android:text="@string/Gehirnerschuetterung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Herzdruckmassage"
            android:text="@string/Herzdruckmassage"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Herzinfarkt"
            android:text="@string/Herzinfarkt"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Hitzschlag"
            android:text="@string/Hitzschlag"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Insektenstich"
            android:text="@string/Insektenstich"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Knochenbruch"
            android:text="@string/Knochenbruch"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Nasenbluten"
            android:text="@string/Nasenbluten"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Notruf"
            android:text="@string/Notruf"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Reanimation"
            android:text="@string/Reanimation"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Rueckenverletzung"
            android:text="@string/Rueckenverletzung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Schaedelbasisbruch"
            android:text="@string/Schaedelbasisbruch"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Schlaganfall"
            android:text="@string/Schlaganfall"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Schlangenbiss"
            android:text="@string/Schlangenbiss"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Schock"
            android:text="@string/Schock"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Sonnenbrand"
            android:text="@string/Sonnenbrand"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Sonnenstich"
            android:text="@string/Sonnenstich"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/SOS"
            android:text="@string/SOS"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/StabileSeitenlage"
            android:text="@string/StabileSeitenlage"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Tierbiss"
            android:text="@string/Tierbiss"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Ueberhitzung"
            android:text="@string/Ueberhitzung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Ueberzuckerung"
            android:text="@string/Ueberzuckerung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/UnfallstelleSichern"
            android:text="@string/UnfallstelleSichern"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Unterkuehlung"
            android:text="@string/Unterkuehlung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Unterzuckerung"
            android:text="@string/Unterzuckerung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Veraetzung"
            android:text="@string/Veraetzung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/VerbrennungLeicht"
            android:text="@string/VerbrennungLeicht"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/VerbrennungSchwer"
            android:text="@string/VerbrennungSchwer"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Vergiftung"
            android:text="@string/Vergiftung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Verkehrsunfall"
            android:text="@string/Verkehrsunfall"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Verschlucken"
            android:text="@string/Verschlucken"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/VerstauchungVerrenkung"
            android:text="@string/VerstauchungVerrenkung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Wiederbelebung"
            android:text="@string/Wiederbelebung"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Wirbelsaeule"
            android:text="@string/Wirbelsaeule"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/dashPlaceholder"
            android:text="@string/dashPlaceholder"
        />
        <TextView
            style="@style/MenuUnselected"
            android:id="@+id/Notruf112Waehlen"
            android:text="@string/Notruf112Waehlen"
        />
	</LinearLayout>
</ScrollView>